<resources>
    <string name="app_name">Task Manager</string>
    <string name="buttonAddTaskText">New Task</string>
    <string name="buttonStatisticsText">Statistic</string>
    <string name="editTaskNameText">Task name</string>
    <string name="editTaskDescText">Task description</string>
    <string name="textViewTimeText">Pick task time (click here)</string>
    <string name="textViewDateText">Pick task date (click here)</string>
    <string name="checkBoxRemindText">Remind me 15 minutes before end</string>
    <string name="buttonRedText">High</string>
    <string name="buttonYellowText">Medium</string>
    <string name="buttonGreenText">Low</string>
    <string name="buttonAddText">Add</string>
    <string name="buttonCancelText">Cancel</string>
    <string name="selectTimeTitle">Select task time:</string>
    <string name="selectDateTitle">Select task date:</string>
    <string name="buttonSaveText">Save</string>
    <string name="buttonDeleteText">Delete</string>
    <string name="timeDateError">Not possible!</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="taskCreated">New task added!</string>
    <string name="changesSaved">Changes saved!</string>taskDeleted
    <string name="taskDeleted">Task deleted!</string>
    <string name="buttonBack">Back</string>
    <string name="priority">Priority:</string>
    <string name="deleteNotify">Task deleted!</string>
    <string name="addNotify">Task added!</string>
    <string name="editNotify">Task edited!</string>
    <string name="notificationTitle">Task reminder</string>
    <string name="notificationTitle2">Task alert</string>
</resources>
