<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ra47_2014.pnrs1.rtrk.taskmanager.AddActivity"
    android:orientation="vertical"
    android:background="@color/yellowBgd">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTaskName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editTaskNameText"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTaskDesc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editTaskDescText"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textViewTimeText"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textViewDateText"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBoxRemind"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/checkBoxRemindText"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonRed"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/redButton"
            android:text="@string/buttonRedText"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <Button
            android:id="@+id/buttonYellow"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/yellowButton"
            android:text="@string/buttonYellowText"
            android:textAllCaps="false"
            android:textSize="17sp" />

        <Button
            android:id="@+id/buttonGreen"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/greenButton"
            android:text="@string/buttonGreenText"
            android:textAllCaps="false"
            android:textSize="17sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonAdd"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/buttonAddText"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/buttonCancelText"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
